[package]
name = "hwctrl-rs"
version = "0.1.0"
authors = ["Ben Scholar <bbs27@case.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosrust = "0.9"
rosrust_msg = "0.1"
env_logger = ""
gpio = "0.4"
socketcan = "1.7"
spidev = "0.3"

[profile.release]
debug-assertions = false
lto = true
debug = false
opt-level = 3

